scheduler: Reset pending input event count on navigation

When a navigation happens, we should reset the number of pending input
events in the user model to avoid waiting for an acknowledgement which
may never arrive.

This is a speculative mitigation for crbug.com/652294.

BUG=652294

Review-Url: https://codereview.chromium.org/2476263002
Cr-Commit-Position: refs/heads/master@{#430281}

Former-commit-id: b12cd2ca201c68f2a127c1af0ec0588f091706bb